probably the final cleanup of steps 1 through 7